# mw_data

./: CMakeLists.txt
code_generators/: derivative_operators.py
derivative_operator_source/: CMakeLists.txt
mwfilters/: I_PH_filters_1.cpp  I_PH_filters_2.cpp  L_PH_filters_1.cpp  L_PH_filters_2.cpp  first.csv
mwfilters_source/: CMakeLists.txt  FilterData.h
